--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <nav>
             <div class="logo">
                 <p>
-  
-                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a></p>
+
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a>
+                </p>
             </div>
             <div class="right-sections">
                 <ul>
@@ -297,7 +298,9 @@
         <div id="footer">
             <div>
                 <h4>Om oss</h4>
-                <p>SoMe ...</p>
+                <p>SoMe er her for å øke bevisstheten rundt nett-mobbing, fremme personvern-regler, og opplyse om
+                    universell utforming. Hold deg oppdatert på de siste sosiale medier fenomenene og nyt vårt
+                    interaktive spill.</p>
             </div>
             <div>
                 <h4>Kontakt oss</h4>
