--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         <nav>
             <div class="logo">
                 <p>
-  
-                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a></p>
+
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a>
+                </p>
             </div>
             <div class="right-sections">
                 <ul>
@@ -152,22 +153,25 @@
             </div>
 
             <div>
-                <p> Bruk hue
-                    Bruk hue er et gratis undervisningsopplegg utviklet av Telenor og Røde kors for å forebygge
+                <img src="bilder/bruk-hue-logo.png" alt="bruk hue logo">
+                <p> <b> Bruk hue </b> </p>
+                <p> Bruk hue er et gratis undervisningsopplegg utviklet av Telenor og Røde kors for å forebygge
                     nettmobbing og utenforskap. Bruk hue jobber for å nå barn, foreldre, lærere og frivillige, slik at
                     barn kan trives og føle seg trygg på alle arenaer i livet. </p>
             </div>
 
             <div>
-                <p>Slett meg
-                    Slettmeg.no er en tjeneste som tilbyr gratis råd og veiledning til å slette personlig informasjon
+                <img src="bilder/slett-meg.jpeg" alt="slett meg logo">
+                <p> <b> Slett meg </b> </p>
+                <p> Slettmeg.no er en tjeneste som tilbyr gratis råd og veiledning til å slette personlig informasjon
                     fra ulike internettjenester og gi råd om personvern og digitale rettigheter. Hvis man får uønskede
                     bilder eller videoer spredt på nett kan Slett meg hjelpe deg med å fjerne det. </p>
             </div>
 
             <div>
-                <p> Kors på halsen
-                    Kors på halsen er et gratis og anonymt samtaletilbud der du som er opp til 18 år kan snakke med en
+                <img src="bilder/kors-paa-halsen.jpeg" alt="kors på halsen logo">
+                <p> <b> Kors på halsen </b> </p>
+                <p> Kors på halsen er et gratis og anonymt samtaletilbud der du som er opp til 18 år kan snakke med en
                     trygg voksen om akkurat det du har på hjertet. Noen ganger kan det være enklere å snakke med en som
                     ikke kjenner deg og å snakke om ting gjør nesten alltid at det føles enklere. </p>
             </div>
