--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="slideshow.css">
+    <link rel="stylesheet" href="index.css">
     <title>SoMe-prosjekt</title>
 </head>
 
