--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -16,7 +16,20 @@
 
     <header>
         <nav>
+            <div class="logo">
+                <p>
 
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a>
+                </p>
+            </div>
+            <div class="right-sections">
+                <ul>
+                    <li><a href="universiell_utforming.html">Universell utforming</a></li>
+                    <li><a href="gdpr.html">GDPR</a></li>
+                    <li><a href="#">Spill</a></li>
+                    <li><a href="#">Om oss</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 
