linker til ressuser

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                 <p> Bruk hue er et gratis undervisningsopplegg utviklet av Telenor og Røde kors for å forebygge
                     nettmobbing og utenforskap. Bruk hue jobber for å nå barn, foreldre, lærere og frivillige, slik at
                     barn kan trives og føle seg trygg på alle arenaer i livet. </p>
+                <a href="https://brukhue.no/"> <b>Les mer her</b></a>
             </div>
 
             <div>
@@ -167,6 +168,7 @@
                 <p> Slettmeg.no er en tjeneste som tilbyr gratis råd og veiledning til å slette personlig informasjon
                     fra ulike internettjenester og gi råd om personvern og digitale rettigheter. Hvis man får uønskede
                     bilder eller videoer spredt på nett kan Slett meg hjelpe deg med å fjerne det. </p>
+                <a href="https://slettmeg.no/"> <b>Les mer her</b></a>
             </div>
 
             <div>
@@ -175,6 +177,7 @@
                 <p> Kors på halsen er et gratis og anonymt samtaletilbud der du som er opp til 18 år kan snakke med en
                     trygg voksen om akkurat det du har på hjertet. Noen ganger kan det være enklere å snakke med en som
                     ikke kjenner deg og å snakke om ting gjør nesten alltid at det føles enklere. </p>
+                <a href="https://www.korspahalsen.no/korspahalsen"> <b>Les mer her</b></a>
             </div>
 
         </section>
