--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -113,7 +113,7 @@
                 </p>
             </div>
             <div>
-                    <audio src="happy_song.mp3" loop autoplay id="horsel_musikk"></audio>
+                    <audio src="audio/happy_song.mp3" loop autoplay id="horsel_musikk"></audio>
                     <i class="fa-solid fa-headphones ikon_musikk" onclick="AvPaaMusikk()"></i>
                     <h5 id="musikk_h5">Trykk på ikonet for å spille av lyd</h5>
             </div>
