--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li><a href="universiell_utforming.html">Universell utforming</a></li>
                     <li><a href="gdpr.html">GDPR</a></li>
-                    <li><a href="#">Spill</a></li>
+                    <li><a href="spill.html">Spill</a></li>
                     <li><a href="#">Om oss</a></li>
                 </ul>
             </div>
