--- a/spill.html
+++ b/spill.html
@@ -13,6 +13,25 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div class="logo">
+                <p>
+
+                    <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a>
+                </p>
+            </div>
+            <div class="right-sections">
+                <ul>
+                    <li><a href="universiell_utforming.html">Universell utforming</a></li>
+                    <li><a href="gdpr.html">GDPR</a></li>
+                    <li><a href="spill.html">Spill</a></li>
+                    <li><a href="#">Om oss</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
     <section id="mamory-game">
         <div class="title">
             <h1>Memory Game!</h1>
