--- a/spill.html
+++ b/spill.html
@@ -176,6 +176,39 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div id="footer">
+            <div>
+                <h4>Om oss</h4>
+                <p>SoMe er her for å øke bevisstheten rundt nett-mobbing, fremme personvern-regler, og opplyse om
+                    universell utforming. Hold deg oppdatert på de siste sosiale medier fenomenene og nyt vårt
+                    interaktive spill.</p>
+            </div>
+            <div>
+                <h4>Kontakt oss</h4>
+                <div class="FooterContainer">
+                    <i class="fa-solid fa-envelope fa-foot"></i>
+                    <p>SoMe@mail.com</p>
+                    <i class="fa-solid fa-phone fa-foot"></i>
+                    <p>+47 123456789</p>
+                    <i class="fa-solid fa-house fa-foot"></i>
+                    <p>Adresse</p>
+                </div>
+            </div>
+            <div>
+                <h4>Følg oss</h4>
+                <div class="FooterContainer">
+                    <i class="fa-brands fa-square-twitter fa-foot"></i>
+                    <p>SoMe</p>
+                    <i class="fa-brands fa-instagram fa-foot"></i>
+                    <p>SoMe</p>
+                    <i class="fa-brands fa-facebook fa-foot"></i>
+                    <p>SoMe</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
     <script src="spill.js"></script>
 </body>
