--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="universiell_utforming.html">Universell utforming</a></li>
                     <li><a href="gdpr.html">GDPR</a></li>
                     <li><a href="spill.html">Spill</a></li>
-                    <li><a href="#">Om oss</a></li>
+                    <li><a href="om-oss.html">Om oss</a></li>
                 </ul>
             </div>
         </nav>
