--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -96,8 +96,8 @@
 
             <div>
                 <i class="fa-solid fa-circle-half-stroke"></i>
+                <h5> Trykk på ikonet for å endre farge! </h5>
             </div>
-
         </section>
 
         <section class="boks" id="lyd">
