--- a/om-oss.html
+++ b/om-oss.html
@@ -45,7 +45,7 @@
     }
 
     #toggle-button {
-      background-color: lightblue;
+      background-color: pink;
       color: #fff;
       border: none;
       padding: 10px 20px;
@@ -54,7 +54,7 @@
     }
 
     #toggle-button:hover {
-      background-color: #0056b3;
+      background-color: palevioletred;
     }
 
     #extra-info {
