--- a/om-oss.html
+++ b/om-oss.html
@@ -51,6 +51,7 @@
       padding: 10px 20px;
       cursor: pointer;
       border-radius: 30px;
+      font-family: 'Comfortaa', sans-serif;
     }
 
     #toggle-button:hover {
