--- a/spill.html
+++ b/spill.html
@@ -23,15 +23,14 @@
             </div>
             <div class="right-sections">
                 <ul>
-                    <li><a href="universiell_utforming.html">Universell utforming</a></li>
+                    <li><a href="universiell_utforming.html">UNIVERSIELL UTFORMING</a></li>
                     <li><a href="gdpr.html">GDPR</a></li>
-                    <li><a href="spill.html">Spill</a></li>
-                    <li><a href="#">Om oss</a></li>
+                    <li><a href="spill.html">SPILL</a></li>
+                    <li><a href="om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
         </nav>
     </header>
-
     <section id="mamory-game">
         <div class="title">
             <h1>Memory Game!</h1>
