--- a/gdpr.html
+++ b/gdpr.html
@@ -18,15 +18,16 @@
         <nav>
             <div class="logo">
                 <p>
+
                     <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a>
                 </p>
             </div>
             <div class="right-sections">
                 <ul>
-                    <li><a href="universiell_utforming.html">Universell utforming</a></li>
+                    <li><a href="universiell_utforming.html">UNIVERSIELL UTFORMING</a></li>
                     <li><a href="gdpr.html">GDPR</a></li>
-                    <li><a href="spill.html">Spill</a></li>
-                    <li><a href="#">Om oss</a></li>
+                    <li><a href="spill.html">SPILL</a></li>
+                    <li><a href="om-oss.html">OM OSS</a></li>
                 </ul>
             </div>
         </nav>
