--- a/universiell_utforming.html
+++ b/universiell_utforming.html
@@ -40,7 +40,7 @@
             <h2> Hva er universell utforming? </h2>
             <p> «Universell utforming» defineres som «design for alle». Det bygger på tanken om at nettsiden skal være
                 tilgjengelege for alle, uavhengig av alder, funksjonsevne og utdanningsnivå.
-                Universiell utforming handler også om hvor tilgjengelig siden er for alle i en målgruppe, og respektere
+                Universell utforming handler også om hvor tilgjengelig siden er for alle i en målgruppe, og respektere
                 ulike
                 brukeres utgangspunkt som erfaring, kunnskap,
                 språkferdigheter og konsentrasjonsnivå.</p>
@@ -65,13 +65,13 @@
             <div id="card">
                 <div class="foran">
                     <i class="fa-solid fa-eye"></i>
-                    <h5> Trykk på ikonet for å se hva som ville blitt lest opp dersom et bildet ikke blir vist </h5>
+                    <h5> Trykk på ikonet for å se hva som blir lest opp for svaksynte</h5>
 
                 </div>
                 <div class="bak">
                     <img src="bilder/dssds.png" alt="Et bilde av et øye som er blått">
                     <!-- Semantic Icon with Accessible Markup -->
-                    <i aria-hidden="true" class="fa-solid fa-arrow-right" title="Time to destination by car"></i>
+                    <i aria-hidden="true" class="fa-solid fa-arrow-right" title="Pil som peker mot høyre"></i>
                     <span class="sr-only"> Pil som peker mot høyre </span>
                 </div>
             </div>
