--- a/erika_prover.html
+++ b/erika_prover.html
@@ -15,6 +15,7 @@
             margin: 30px;
             font-size: 40px;
             font-weight: 900;
+            margin-top: 122px;
         }
 
         a.active,
