--- a/spill.html
+++ b/spill.html
@@ -31,13 +31,9 @@
             </div>
         </nav>
     </header>
-    <section id="mamory-game">
-        <div class="title">
-            <h1>Memory Game!</h1>
-        </div>
-
+    <section id="memory-game">
         <div class="instructions">
-            <h2> Instruksjoner: </h2>
+            <h2> Memory-game: </h2>
             Klikk på kortene for å flippe de. Det er om å gjøre å parre opp alle de like kortene, med færrest mulig
             trekk. <br>
             Lykke til!
