--- a/om-oss.html
+++ b/om-oss.html
@@ -96,7 +96,7 @@
         Vi tror på å skape et trygt og inkluderende digitalt miljø for alle.
       </p>
 
-      <img src="mannmedmobil.webp"> <br>
+      <img src="bilder/mannmedmobil.webp"> <br>
 
       <button id="toggle-button">Vis mer info</button>
 
