--- a/om-oss.html
+++ b/om-oss.html
@@ -43,8 +43,8 @@
     }
 
     #toggle-button {
-      background-color: pink;
-      color: #fff;
+      background-color:#ba407d;
+      color: #fed9f6;
       border: none;
       padding: 10px 20px;
       cursor: pointer;
@@ -53,7 +53,8 @@
     }
 
     #toggle-button:hover {
-      background-color: palevioletred;
+      background-color:#fed9f6;
+      color: #ba407d;
     }
 
     #extra-info {
