--- a/om-oss.html
+++ b/om-oss.html
@@ -43,7 +43,7 @@
     }
 
     #toggle-button {
-      background-color:#ba407d;
+      background-color: #cd4883d9;
       color: #fed9f6;
       border: none;
       padding: 10px 20px;
