--- a/spill.html
+++ b/spill.html
@@ -74,7 +74,7 @@
                             Normalt sender man kun en om gangen. Eksempeler på tilfeller hvor man ofte sender dobbelsnap er: </p>
                         <ul>
                             <li> hvis det er noen viktig</li>
-                            <li> hvis det bestevennen din</li>
+                            <li> hvis det er bestevennen din</li>
                             <li> hvis du vil vise ekstra interresse</li>
                         </ul>
                     </div>
