mer media query

--- a/om-oss.html
+++ b/om-oss.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer">
 
 
   <title>Om Oss</title>
@@ -38,8 +38,6 @@
     img {
       margin: 30px;
       width: 600px;
-      align-items: center;
-
     }
 
     #toggle-button {
@@ -53,13 +51,31 @@
     }
 
     #toggle-button:hover {
-      background-color:#fed9f6;
+      background-color: #fed9f6;
       color: #ba407d;
     }
 
     #extra-info {
       margin-top: 10px;
     }
+
+    @media only screen and (max-width: 800px) {
+      img {
+        width: 400px
+      }
+    }
+    @media only screen and (max-width: 600px) {
+      img {
+        width: 300px
+      }
+    }
+    @media only screen and (max-width: 450px) {
+      img {
+        width: 250px
+      }
+    }
+
+ 
   </style>
 
 
@@ -69,19 +85,19 @@
   <header>
     <nav>
       <div class="logo">
-          <p>
-              <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a>
-          </p>
+        <p>
+          <i class="fa-brands fa-slack" style="color: #ffffff;"></i><a href="index.html">SoMe</a>
+        </p>
       </div>
       <div class="right-sections">
-          <ul>
-              <li><a href="universiell_utforming.html">UNIVERSIELL UTFORMING</a></li>
-              <li><a href="gdpr.html">GDPR</a></li>
-              <li><a href="spill.html">SPILL</a></li>
-              <li><a href="om-oss.html">OM OSS</a></li>
-          </ul>
+        <ul>
+          <li><a href="universiell_utforming.html">UNIVERSIELL UTFORMING</a></li>
+          <li><a href="gdpr.html">GDPR</a></li>
+          <li><a href="spill.html">SPILL</a></li>
+          <li><a href="om-oss.html">OM OSS</a></li>
+        </ul>
       </div>
-  </nav>
+    </nav>
   </header>
 
   <main>
@@ -133,38 +149,38 @@
       }
     });</script>
 
-<footer>
-  <div id="footer">
+  <footer>
+    <div id="footer">
       <div>
-          <h4>Om oss</h4>
-          <p>SoMe er her for å øke bevisstheten rundt nett-mobbing, fremme personvern-regler, og opplyse om
-              universell utforming. Hold deg oppdatert på de siste sosiale medier fenomenene og nyt vårt
-              interaktive spill.</p>
+        <h4>Om oss</h4>
+        <p>SoMe er her for å øke bevisstheten rundt nett-mobbing, fremme personvern-regler, og opplyse om
+          universell utforming. Hold deg oppdatert på de siste sosiale medier fenomenene og nyt vårt
+          interaktive spill.</p>
       </div>
       <div>
-          <h4>Kontakt oss</h4>
-          <div class="FooterContainer">
-              <i class="fa-solid fa-envelope fa-foot"></i>
-              <p>SoMe@mail.com</p>
-              <i class="fa-solid fa-phone fa-foot"></i>
-              <p>+47 123456789</p>
-              <i class="fa-solid fa-house fa-foot"></i>
-              <p>Adresse</p>
-          </div>
+        <h4>Kontakt oss</h4>
+        <div class="FooterContainer">
+          <i class="fa-solid fa-envelope fa-foot"></i>
+          <p>SoMe@mail.com</p>
+          <i class="fa-solid fa-phone fa-foot"></i>
+          <p>+47 123456789</p>
+          <i class="fa-solid fa-house fa-foot"></i>
+          <p>Adresse</p>
+        </div>
       </div>
       <div>
-          <h4>Følg oss</h4>
-          <div class="FooterContainer">
-              <i class="fa-brands fa-square-twitter fa-foot"></i>
-              <p>SoMe</p>
-              <i class="fa-brands fa-instagram fa-foot"></i>
-              <p>SoMe</p>
-              <i class="fa-brands fa-facebook fa-foot"></i>
-              <p>SoMe</p>
-          </div>
+        <h4>Følg oss</h4>
+        <div class="FooterContainer">
+          <i class="fa-brands fa-square-twitter fa-foot"></i>
+          <p>SoMe</p>
+          <i class="fa-brands fa-instagram fa-foot"></i>
+          <p>SoMe</p>
+          <i class="fa-brands fa-facebook fa-foot"></i>
+          <p>SoMe</p>
+        </div>
       </div>
-  </div>
-</footer>
+    </div>
+  </footer>
 
 
 
