endre navn fra tuttifrutti til fenomen_section

--- a/spill.html
+++ b/spill.html
@@ -61,7 +61,7 @@
     </section>
 
     <main>
-        <section id="tuttifrutti">
+        <section id="fenomen_section">
             <h2>Fenomener på sosiale medier</h2>
             <div class="fenomen flip-card">
                 <div class="flip-card-inner">
