js og fikset skrivefeil

--- a/gdpr.html
+++ b/gdpr.html
@@ -118,10 +118,9 @@
 
         <section id="cookies-intro">
             <p> I mars 2019 kom det en uttalelse fra Personvernrådet (EDPB) der det blant legges til grunn at samtykke
-                til cookies må være et gyldig samtykke etter <a class="videreføring" href="#personvern" onclick="scrollToSection('personvern')"> personvernforordningen </a> også. EU-domstolen kom i oktober
+                til cookies må være et gyldig samtykke etter <a class="videreføring" href="#personvern"> personvernforordningen </a> også. EU-domstolen kom i oktober
                 2019 til samme resultat. </p> <br>
-            <p> Det vil si at kravene til samtykke for å plassere <a class="videreføring" href="#cookies"
-                    onclick="visCookies()" onclick="scrollToSection('cookies')"> cookies </a> på nettsider i EU er høyere enn tidligere, og her
+            <p> Det vil si at kravene til samtykke for å plassere <a class="videreføring" href="#cookies"> cookies </a> på nettsider i EU er høyere enn tidligere, og her
                 er det ikke mulig å gi samtykke gjennom nettleserinnstillingene.</p> <br>
             <h2>Cookies og informasjonskapsler</h2> <br>
             <p id="definition">En informasjonskapsel, ofte kalt cookie, er en liten tekstfil som lastes ned og lagres på
@@ -129,7 +128,7 @@
         </section>
 
 
-        <img id="arrow" src="bilder/arrow.png" alt="arrow" onclick="visCookies()">
+        <img id="arrow" src="bilder/arrow.png" alt="arrow">
         <section id="cookies" class="hidden">
             <h2>Cookies</h2>
             <br>
