--- a/om-oss.html
+++ b/om-oss.html
@@ -35,6 +35,10 @@
       margin-top: 0;
     }
 
+    h2 {
+      font-size: 30px;
+    }
+
     img {
       margin: 30px;
       width: 600px;
@@ -84,7 +88,7 @@
   </header>
 
   <main>
-    <section id="about-us">
+    <section id="om-oss">
 
       <h2>Om Oss</h2>
 
@@ -121,8 +125,9 @@
     </section>
   </main>
 
-  <script>document.getElementById('toggle-button').addEventListener('click', function () {
-      var extraInfo = document.getElementById('extra-info');
+  <script>
+  document.getElementById('toggle-button').addEventListener('click', function () {
+      const extraInfo = document.getElementById('extra-info');
       if (extraInfo.style.display === 'none') {
         extraInfo.style.display = 'block';
         document.getElementById('toggle-button').textContent = 'Skjul ekstra info';
