--- a/om-oss.html
+++ b/om-oss.html
@@ -11,7 +11,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer">
 
 
-  <title>Om Oss</title>
+  <title>OM OSS</title>
   
  
 
@@ -39,7 +39,7 @@
   <main>
     <section id="om-oss">
 
-      <h1>Om Oss</h1>
+      <h1>OM OSS</h1>
 
       <p>Velkommen til SoMe - din kilde til å utforske og forstå sosiale medier!
         Vi er et dedikert team av studenter ved IT1, og vår lidenskap er å øke bevisstheten rundt ulike aspekter ved
