--- a/gdpr.html
+++ b/gdpr.html
@@ -24,7 +24,7 @@
             </div>
             <div class="right-sections">
                 <ul>
-                    <li><a href="universiell_utforming.html">UNIVERSIELL UTFORMING</a></li>
+                    <li><a href="universiell_utforming.html">UNIVERSELL UTFORMING</a></li>
                     <li><a href="gdpr.html">GDPR</a></li>
                     <li><a href="spill.html">SPILL</a></li>
                     <li><a href="om-oss.html">OM OSS</a></li>
