--- a/gdpr.html
+++ b/gdpr.html
@@ -34,7 +34,7 @@
     </header>
 
     <main>
-        <h1> Personvern </h1>
+        <h1> PERSONVERN </h1>
         <br>
 
         <h2> GDPR </h2>
