--- a/spill.html
+++ b/spill.html
@@ -32,6 +32,7 @@
         </nav>
     </header>
     <section id="memory-game">
+
         <div class="instructions">
             <h2> Memory-game: </h2>
             Klikk på kortene for å flippe de. Det er om å gjøre å parre opp alle de like kortene, med færrest mulig
@@ -59,6 +60,7 @@
         <audio id="winSound" src="audio/success.mp3"></audio>
         <audio id="celebrationSound" src="audio/celebration.mp3"></audio>
     </section>
+    <div id="highscore-container"></div>
 
     <main>
         <section id="fenomen_section">
@@ -71,7 +73,8 @@
                     </div>
                     <div class="flip-card-back">
                         <p> <b>Dobbelsnap</b> er når man sender to bilde-snapper etter hverandre.
-                            Normalt sender man kun en om gangen. Eksempeler på tilfeller hvor man ofte sender dobbelsnap er: </p>
+                            Normalt sender man kun en om gangen. Eksempeler på tilfeller hvor man ofte sender dobbelsnap
+                            er: </p>
                         <ul>
                             <li> hvis det er noen viktig</li>
                             <li> hvis det er bestevennen din</li>
