--- a/gdpr.html
+++ b/gdpr.html
@@ -33,10 +33,11 @@
         </nav>
     </header>
 
-    <main>
+    <section id="hero">
         <h1> PERSONVERN </h1>
-        <br>
+    </section>
 
+    <main>
         <h2> GDPR </h2>
         <p id="definition"> GDPR er forkortelsen for General Data Protection Regulation, de spesifikke personvernlovene
             for individuelle
