lagt til mer innhold på gdpr

--- a/gdpr.html
+++ b/gdpr.html
@@ -43,7 +43,7 @@
             for individuelle
             borgere i EU og Det europeiske økonomiske samarbeidsområdet (EØS).</p>
 
-        <div class="container">
+        <div id="GDPR">
             <div class="image-container">
                 <img src="bilder/GDPR-logo.png" alt="Felles bilde" id="main-image">
                 <div class="overlay"></div>
@@ -101,6 +101,7 @@
             </div>
         </div>
 
+        <br>
         <section id="personvern">
             <h2>Personopplysningsloven </h2>
             <br>
@@ -134,6 +135,17 @@
                 beveger seg rundt på nettstedet eller huske handlekurv i nettbutikker. Den som står bak
                 informasjonskapselen, altså den behandlingsansvarlige, kan tilpasse tjenestene sine ut fra informasjonen
                 som lagres.</p>
+        </section>
+
+        <section id="personvern">
+            <h2> Viktig i et demokratisk samfunn </h2>
+            <br>
+            <p> Personvern er ikke bare en viktig menneskerettighet som skal sikre personlig integritet og respekt for personvernet. Personvern er også viktig for å sikre felles beste i et demokratisk samfunn. </p> <br>
+               <p> Uten rett til  privatliv vil ikke individer kunne  skape  et rom der de selvstendig kan reflektere og vurdere, uten innblanding eller kontroll fra andre.</p>
+                <br> <p> Utilstrekkelig personvern begrenser dermed åpen utveksling av ideer og offentlig deltakelse i det politiske liv, og setter demokratiet i fare. Noen mennesker kan være bekymret for at informasjon om deres personlige forhold vil komme frem og bli offentliggjort. Du kan også pålegge deg selv begrensninger i frykt for at myndighetene vil registrere og lagre informasjon om din kommunikasjon med andre, dine bevegelser, interesser og uttrykk.</p> <br>
+            <p> Alle har et krav på å få vite akkurat hvilke opplysninger som blir lagret om vedkommende. Noen av kravene som stilles med GDPR kan sees <a class="videreføring" href="#GDPR"> her. </a></p>
+            <br>
+            <p> Eller du kan lese mer om GDPR og personvern på <a class="videreføring" href="https://lovdata.no/dokument/NL/lov/2018-06-15-38/KAPITTEL_gdpr#KAPITTEL_gdpr"> lovdata.no </a></p>
         </section>
 
 
