--- a/gdpr.html
+++ b/gdpr.html
@@ -49,51 +49,51 @@
             </div>
 
             <div class="icon-box" id="icon-box-1">
-                <img src="bilder/privacy.png" alt="Ikon 1">
+                <i class="fa-solid fa-lock"></i>
                 <h2>Bøter av inntil 4% av omsetningen</h2>
                 <p>Organisasjoner som bryter med GDPR kan bli bøtelagt med opptil 4 % av den årlige globale omsetningen
                     eller 20 millioner euro</p>
             </div>
 
             <div class="icon-box" id="icon-box-2">
-                <img src="bilder/web.png" alt="Web">
+                <i class="fa-solid fa-globe"></i>
                 <h2>Økt territoriell omfang</h2>
                 <p>Gjelder for ethvert selskap som behandler personopplysninger om EU-borgere, uavhengig av steder</p>
             </div>
 
             <div class="icon-box" id="icon-box-3">
-                <img src="bilder/concent.png" alt=" Samtykke">
+                <i class="fa-solid fa-user-check"></i>
                 <h2>Samtykke er viktig!</h2>
                 <p>Eksplisitt samtykke må gis i en forståelig og lett tilgjengelig form</p>
             </div>
 
             <div class="icon-box" id="icon-box-4">
-                <img src="bilder/access.png" alt="tilgang">
+                <i class="fa-solid fa-lock"></i>
                 <h2>Rett til tilgang og portabilitet</h2>
                 <p>Brukere kan spørre om og hvordan deres personopplysninger blir behandlet</p>
             </div>
 
             <div class="icon-box" id="icon-box-5">
-                <img src="bilder/timer.png" alt="timer">
+                <i class="fa-solid fa-stopwatch"></i>
                 <h2>Bruddvarsel innen 72 timer</h2>
                 <p>Brudd må rapporteres innen 72 timer etter at de først ble kjent med bruddet</p>
             </div>
 
             <div class="icon-box" id="icon-box-6">
-                <img src="bilder/privacy.png" alt="privacy">
+                <i class="fa-solid fa-lock"></i>
                 <h2>Personvern ved design</h2>
                 <p>Databeskyttelse fra begynnelsen av utformingen av systemene, snarere enn en retrospektiv tillegg</p>
             </div>
 
             <div class="icon-box" id="icon-box-7">
-                <img src="bilder/erase.png" alt="erase">
+                <i class="fa-solid fa-key"></i>
                 <h2>Rett til å bli glemt</h2>
                 <p>Gir den registrerte rett til å få behandlingsansvarlig til å slette hans/hennes personopplysninger
                     (og potensielt også tredjeparter)</p>
             </div>
 
             <div class="icon-box" id="icon-box-8">
-                <img src="bilder/data-protection.png" alt="Databeskyttelse">
+                <i class="fa-solid fa-user-lock"></i>
                 <h2>Obligatoriske databeskyttelsesansvarlige</h2>
                 <p>Oppnevnt i visse tilfeller, for å legge til rette for at selskapene trenger å demonstrere
                     GDPR-samsvar</p>
